# WebSpectre

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  spectre.py
config/: config.yaml
core/: __init__.py  base.py  config.py  display.py  engine.py  loader.py  reporter.py
modules/discovery/: backup_files.py  directory_listing.py  dns_records.py  robots_txt.py  sitemap_xml.py
modules/http/: clickjacking.py  cookie_analysis.py  cors_review.py  http_methods.py  security_headers.py  server_info.py
modules/technology/: cms_detect.py  waf_detect.py
utils/: __init__.py  network.py  validator.py
